--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -73,7 +73,7 @@ hr.star-art:after {
 }
 header {
   text-align: center;
-  background-image:url(../img/typing.gif);
+ /* background-image:url(../img/code.mp4);*/
   background-size: cover;
   background-position:center;
   color: white;
@@ -200,7 +200,7 @@ header .intro-text .skills {
   }
 }
 section {
-  padding: 100px 0;
+      padding: 100px 0px 20px 0px;
 }
 section h2 {
   margin: 0;
@@ -233,7 +233,6 @@ section.success {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0;
   transition: all ease 0.5s;
   -webkit-transition: all ease 0.5s;
   -moz-transition: all ease 0.5s;
@@ -248,7 +247,7 @@ section.success {
   font-size: 20px;
   text-align: center;
   top: 50%;
-  margin-top: -12px;
+  margin-top: -30px;
   color: white;
 }
 #projects .portfolio-item .portfolio-link .caption .caption-content i {
